<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/splash_bg3"
    tools:context=".presentation.views.splash.ThirdSplashFragment">

    <View
        android:id="@+id/backgroundOverlay3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/_18sdp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_splash3"
            android:textSize="@dimen/_22sdp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/_14sdp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_splash3"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/gray_20"
            android:lineSpacingMultiplier="1.2"
            android:textAlignment="center"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGetStarted"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:text="@string/btn_get_started"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:background="@drawable/btn_bg"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginBottom="@dimen/_16sdp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:text="@string/sign_in"
            android:textSize="@dimen/_15sdp"
            android:textStyle="normal"
            android:textAllCaps="false"
            android:background="@drawable/outline_btn_bg"
            android:textColor="@color/aqua"
            android:layout_marginBottom="@dimen/_24sdp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>