<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth_nav_graph"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="nhn.ntech.cinehub.presentation.views.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_detailMovieFragment"
            app:destination="@id/detailMovieFragment" />
        <action
            android:id="@+id/action_homeFragment_to_movieFragment"
            app:destination="@id/movieFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="nhn.ntech.cinehub.presentation.views.home.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_searchFragment_to_detailMovieFragment"
            app:destination="@id/detailMovieFragment" />
    </fragment>
    <fragment
        android:id="@+id/ticketFragment"
        android:name="nhn.ntech.cinehub.presentation.views.home.TicketFragment"
        android:label="@string/ticket"
        tools:layout="@layout/fragment_ticket" >
    </fragment>
    <fragment
        android:id="@+id/accountFragment"
        android:name="nhn.ntech.cinehub.presentation.views.home.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" >
        <action
            android:id="@+id/action_accountFragment_to_personalFragment"
            app:destination="@id/personalFragment" />

        <action
            android:id="@+id/action_accountFragment_to_historyFragment"
            app:destination="@id/historyFragment" />

        <action
            android:id="@+id/action_accountFragment_to_changePasswordFragment"
            app:destination="@id/changePasswordFragment" />

        <action
            android:id="@+id/action_accountFragment_to_settingFragment"
            app:destination="@id/settingFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailMovieFragment"
        android:name="nhn.ntech.cinehub.presentation.views.details.DetailMovieFragment"
        android:label="fragment_detail_movie"
        tools:layout="@layout/fragment_detail_movie">
        <argument
            android:name="movieId"
            app:argType="integer"/>
    </fragment>
    <fragment
        android:id="@+id/movieFragment"
        android:name="nhn.ntech.cinehub.presentation.views.home.MovieFragment"
        android:label="MovieFragment">
        <action
            android:id="@+id/action_movieFragment_to_detailMovieFragment"
            app:destination="@id/detailMovieFragment" />
        <argument
            android:name="message"
            app:argType="string"/>
    </fragment>
    <fragment
        android:id="@+id/changePasswordFragment"
        android:name="nhn.ntech.cinehub.presentation.views.home.ChangePasswordFragment"
        android:label="fragment_change_password"
        tools:layout="@layout/fragment_change_password" />
    <fragment
        android:id="@+id/personalFragment"
        android:name="nhn.ntech.cinehub.presentation.views.home.PersonalFragment"
        android:label="PersonalFragment" />
    <fragment
        android:id="@+id/settingFragment"
        android:name="nhn.ntech.cinehub.presentation.views.home.SettingFragment"
        android:label="fragment_setting"
        tools:layout="@layout/fragment_setting" />
    <fragment
        android:id="@+id/historyFragment"
        android:name="nhn.ntech.cinehub.presentation.views.home.HistoryFragment"
        android:label="fragment_history"
        tools:layout="@layout/fragment_history" />
</navigation>