<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.views.home.ChangePasswordFragment">

    <!-- Header -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/outline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/txtTitleHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_movie"
            android:textColor="@color/gray_100"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:id="@+id/btnMore"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:visibility="gone"
            android:src="@drawable/ic_frame"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutOldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtOldPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:paddingVertical="4dp"
            android:paddingHorizontal="16dp"
            android:inputType="textPassword"
            android:hint="@string/hint_old_password"
            android:background="@drawable/edt_bg"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutOldPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:hintEnabled="false"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/gray">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNewPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:paddingVertical="4dp"
            android:paddingHorizontal="16dp"
            android:hint="@string/hint_new_password"
            android:inputType="textPassword"
            android:background="@drawable/edt_bg"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutConfirmNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNewPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:hintEnabled="false"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtConfirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:paddingVertical="4dp"
            android:paddingHorizontal="16dp"
            android:hint="@string/hint_confirm_new_password"
            android:inputType="textPassword"
            android:background="@drawable/edt_bg"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSavePassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/btn_bg"
        android:text="@string/save_password"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:elevation="6dp"
        android:textAllCaps="false"
        android:textSize="@dimen/_14sdp"
        android:layout_marginBottom="@dimen/_32sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>