<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_16sdp"
    android:layout_marginVertical="@dimen/_8sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imgPoster"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_90sdp"
        android:background="@drawable/img_corner_bg_12"
        android:src="@drawable/ic_launcher_background"
        android:clipToOutline="true"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imgHeart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/imgPoster">
        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/agents_of_mystery"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            android:textColor="@color/gray_100"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginStart="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/txtGenre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/action_adventure_sci_fi"
            android:textColor="@color/gray_70"
            android:textSize="@dimen/_11sdp"
            android:textStyle="normal"
            android:layout_marginTop="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="@id/txtTitle"
            app:layout_constraintStart_toStartOf="@id/txtTitle"
            app:layout_constraintTop_toBottomOf="@id/txtTitle" />

        <ImageView
            android:id="@+id/imgClock"
            android:layout_width="@dimen/_13sdp"
            android:layout_height="@dimen/_13sdp"
            android:src="@drawable/ic_clock"
            android:layout_marginTop="@dimen/_8sdp"
            app:layout_constraintStart_toStartOf="@id/txtGenre"
            app:layout_constraintTop_toBottomOf="@id/txtGenre"/>

        <TextView
            android:id="@+id/txtTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_186_mins"
            android:textColor="@color/gray_80"
            android:layout_marginStart="@dimen/_8sdp"
            app:layout_constraintStart_toEndOf="@id/imgClock"
            app:layout_constraintTop_toTopOf="@id/imgClock"
            app:layout_constraintBottom_toBottomOf="@id/imgClock"/>

        <ImageView
            android:id="@+id/imgStar"
            android:layout_width="@dimen/_12sdp"
            android:layout_height="@dimen/_12sdp"
            android:src="@drawable/star"
            android:layout_marginStart="@dimen/_16sdp"
            app:layout_constraintStart_toEndOf="@id/txtTime"
            app:layout_constraintTop_toTopOf="@id/txtTime"
            app:layout_constraintBottom_toBottomOf="@id/txtTime"/>


        <TextView
            android:id="@+id/txtRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4_7"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/gray_80"
            android:layout_marginStart="@dimen/_4sdp"
            app:layout_constraintStart_toEndOf="@id/imgStar"
            app:layout_constraintTop_toTopOf="@id/imgStar"
            app:layout_constraintBottom_toBottomOf="@id/imgStar"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imgHeart"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:src="@drawable/ic_heart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>